--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&family=Syncopate:wght@700&display=swap');
+
+h1, h2 {
+    font-family: 'Syncopate';
+}
+
+
+h3, h4, h5, h6 {
+    font-family: 'Montserrat';
+    font-weight: 600;
+}
+
+p {
+    font-family: 'Montserrat';
+    font-weight: 400;
+}
